// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cross context references sanity tests should access reference with multiple cardinality 1`] = `
Object {
  "entryPointResults": Object {
    "evaluationTimestamp": Any<Date>,
    "results": Object {
      "Policy:0:policyNumber": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "0",
          "contextName": "Policy",
          "fieldName": "policyNumber",
          "fieldPath": "policyNumber",
          "fieldType": "STRING",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": Object {
                "errorCode": "code",
                "errorMessage": "Value didn't match assertion",
                "templateVariables": Array [],
              },
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "R-CCR-Policy-PartyRole",
              "targetPath": "policyNumber",
            },
          },
        ],
      },
    },
  },
  "fieldResults": Object {
    "Policy:0:policyNumber": Object {
      "fieldType": "STRING",
      "id": "Policy:0:policyNumber",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "policyNumber",
      "ruleResults": Array [
        Object {
          "errorCode": "code",
          "errorMessage": "Value didn't match assertion",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": Object {
              "errorCode": "code",
              "errorMessage": "Value didn't match assertion",
              "templateVariables": Array [],
            },
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "ruleName": "R-CCR-Policy-PartyRole",
          "severity": "critical",
          "templateVariables": Array [],
        },
      ],
    },
  },
}
`;

exports[`Cross context references sanity tests should check is self reference with inherited context will be skipped 1`] = `
Object {
  "entryPointResults": Object {
    "evaluationTimestamp": Any<Date>,
    "results": Object {
      "Policy:0:policyCurrency": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "0",
          "contextName": "Policy",
          "fieldName": "policyCurrency",
          "fieldPath": "policyCurrency",
          "fieldType": "STRING",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": Object {
                "errorCode": "code",
                "errorMessage": "Value didn't match assertion",
                "templateVariables": Array [],
              },
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "R-CCR-Policy-ExPolicy",
              "targetPath": "policyCurrency",
            },
          },
        ],
      },
    },
  },
  "fieldResults": Object {
    "Policy:0:policyCurrency": Object {
      "fieldType": "STRING",
      "id": "Policy:0:policyCurrency",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "policyCurrency",
      "ruleResults": Array [
        Object {
          "errorCode": "code",
          "errorMessage": "Value didn't match assertion",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": Object {
              "errorCode": "code",
              "errorMessage": "Value didn't match assertion",
              "templateVariables": Array [],
            },
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "ruleName": "R-CCR-Policy-ExPolicy",
          "severity": "critical",
          "templateVariables": Array [],
        },
      ],
    },
  },
}
`;

exports[`Cross context references sanity tests should not fail on executing rules on same instance with inheritance rules 1`] = `
Object {
  "entryPointResults": Object {
    "evaluationTimestamp": Any<Date>,
    "results": Object {
      "PolicyExtended:0:policyCurrency": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "0",
          "contextName": "PolicyExtended",
          "fieldName": "policyCurrency",
          "fieldPath": "policyCurrency",
          "fieldType": "STRING",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "PolicyExtended",
              "payloadtype": "ASSERTION",
              "ruleName": "Inheritance-CCR-02",
              "targetPath": "policyCurrency",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 1,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "ASSERTION",
              "ruleName": "Inheritance-CCR-01",
              "targetPath": "policyCurrency",
            },
          },
        ],
      },
    },
  },
  "fieldResults": Object {
    "PolicyExtended:0:policyCurrency": Object {
      "fieldType": "STRING",
      "id": "PolicyExtended:0:policyCurrency",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "policyCurrency",
      "ruleResults": Array [
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "ruleName": "Inheritance-CCR-02",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-assertion-error",
          "errorMessage": "Assertion failed",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 1,
            "validationSeverity": "critical",
          },
          "ruleName": "Inheritance-CCR-01",
          "severity": "critical",
          "templateVariables": Array [],
        },
      ],
    },
  },
}
`;
